--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
       <!-- Navbar -->
       <header>
         <h2 class="logo">Ganeshwar</h2>
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
           <a href="#home" class="">Home</a>
           <a href="#about">About Me</a>
           <a href="#skill">Skills</a>
           <a href="#project">Project</a>
           <a href="#contact">Contact Me</a>
         </nav>
+         <!-- Burger Icon -->
+  <div class="burger" id="burger">
+    &#9776;
+  </div>
       </header>
 
       <!-- Home Section -->
